--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,13 +1,31 @@
 ---
+# defaults file for asdf
+ansible_become: True
+
 asdf_plugins: []
-
-asdf_user: "deploy"
-
-asdf_legacy_version_file: "yes"
-
 # asdf_plugins:
 #   - name: "erlang"
 #     versions:
 #       - 18.3
 #       - 20.1
 #     global: 20.1
+
+asdf_user: "deploy"
+
+asdf_legacy_version_file: "yes"
+
+# Debian
+asdf_plugin_dependencies:
+  - automake
+  - autoconf
+  - build-essential
+  - libreadline-dev
+  - libncurses-dev
+  - libssl-dev
+  - libyaml-dev
+  - libxslt-dev
+  - libffi-dev
+  - libtool
+  - unzip
+
+apt_cache_valid_time: 86400
