--- a/tests/playbook.yml
+++ b/tests/playbook.yml
@@ -5,7 +5,7 @@
       asdf_user: vagrant
       asdf_plugins:
         - name: "erlang"
-          versions: ["18.3", "20.1"]
+          versions: ["20.1"]
           global: "20.1"
         - name: "elixir"
-          versions: ["1.5.1", "1.4.1", "1.3.3"]
+          versions: ["1.5.1", "1.4.1"]
