--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,4 +1,9 @@
 ---
+- include_vars: "{{ item }}"
+  with_first_found:
+    - "../vars/{{ ansible_os_family }}.yml"
+    - "../vars/os_defaults.yml"
+
 - name: "get users HOME"
   getent:
     database: passwd
@@ -14,20 +19,24 @@
     pkg: "{{ item }}"
     install_recommends: no
     cache_valid_time: "{{ apt_cache_valid_time }}"
-  with_items: "{{ asdf_plugin_dependencies }}"
+  with_items:
+    - "{{ asdf_plugin_dependencies }}"
+    - "{{ asdf_optional_dependencies }}"
   when: ansible_os_family == "Debian"
 
 - name: "install plugin dependencies with yum"
   yum:
     name: "{{ item }}"
-  with_items: "{{ asdf_plugin_dependencies }}"
+  with_items:
+    - "{{ asdf_plugin_dependencies }}"
+    - "{{ asdf_optional_dependencies }}"
   when: ansible_os_family == "RedHat"
 
 - name: "install asdf"
   git:
     repo: "https://github.com/asdf-vm/asdf.git"
     dest: "{{ asdf_user_home }}/.asdf"
-    version: "{{ asdf_version | default('HEAD') }}"
+    version: "{{ asdf_version }}"
   become_user: "{{ asdf_user }}"
 
 - name: "source asdf script"
