--- a/tasks/plugins.yml
+++ b/tasks/plugins.yml
@@ -10,6 +10,8 @@
 
 - name: "install apps"
   command: "bash -lc 'asdf install {{ item.0.name }} {{ item.1 }}'"
+  args:
+    creates: "{{ asdf_user_home }}/.asdf/installs/{{ item.0.name }}/{{ item.1 }}"
   with_subelements:
     - "{{ asdf_plugins }}"
     - versions
@@ -23,13 +25,6 @@
   when: item.versions is defined
   with_items: "{{ asdf_plugins }}"
   become_user: "{{ asdf_user }}"
-
-# - name: "set default version"
-#   command: "bash -lc 'asdf install'"
-#   args:
-#     chdir: "{{ asdf_user_home }}"
-#   when: asdf_plugins|length > 0
-#   become_user: "{{ asdf_user }}"
 
 - name: "set asdfrc"
   template:
