--- a/tests/Dockerfile-centos7
+++ b/tests/Dockerfile-centos7
@@ -1,10 +1,13 @@
 FROM centos:7
 
+ARG ANSIBLE_VERSION="2.7.4"
+ARG PLAYBOOK_FILE="playbook.yml"
+
 RUN yum -y install epel-release && \
-    yum -y install sudo python python-devel python-pip gcc make \
-     initscripts libffi-devel openssl-devel && \
+    yum -y install sudo python python-devel python-pip gcc make initscripts libffi-devel openssl-devel && \
     pip install -q cffi && \
-    pip install -q ansible==2.5.1
+    pip install -q ansible==$ANSIBLE_VERSION && \
+    ansible --version
 
 WORKDIR /tmp/ansible-role-asdf
 COPY  .  /tmp/ansible-role-asdf
@@ -12,7 +15,6 @@ COPY  .  /tmp/ansible-role-asdf
 RUN useradd -m vagrant
 RUN echo localhost > inventory
 
-RUN ansible-playbook -i inventory -c local tests/playbook.yml
+RUN ansible-playbook -i inventory -c local tests/$PLAYBOOK_FILE
 
 RUN sudo -iu vagrant bash -lc 'asdf --version'
-RUN sudo -iu vagrant bash -lc 'elixir --version'
