--- a/tests/Dockerfile-ubuntu18.04
+++ b/tests/Dockerfile-ubuntu18.04
@@ -1,12 +1,12 @@
-FROM ubuntu:16.04
+FROM ubuntu:18.04
 
 ARG ANSIBLE_VERSION="2.7.4"
 ARG PLAYBOOK_FILE="playbook.yml"
 
 RUN apt-get update -qq && \
-    apt-get install -qq sudo python-apt python-pycurl python-pip python-dev libffi-dev libssl-dev && \
-    pip install -U setuptools && \
-    pip install -q ansible==$ANSIBLE_VERSION && \
+    apt-get install -qq sudo python python3-apt python3-pycurl python3-pip python3-dev libffi-dev libssl-dev && \
+    pip3 install -U setuptools && \
+    pip3 install -q ansible==$ANSIBLE_VERSION && \
     ansible --version
 
 WORKDIR /tmp/ansible-role-asdf
