--- a/tests/playbook.yml
+++ b/tests/playbook.yml
@@ -4,8 +4,5 @@
     - role: ansible-role-asdf
       asdf_user: vagrant
       asdf_plugins:
-        - name: "erlang"
-          versions: ["20.1"]
-          global: "20.1"
-        - name: "elixir"
-          versions: ["1.5.1", "1.4.1"]
+        - name: "golang"
+          versions: ["1.11.4"]
