all tasks should have name

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,5 +1,6 @@
 ---
-- include_vars: "{{ item }}"
+- name: "include OS specific vars"
+  include_vars: "{{ item }}"
   with_first_found:
     - "../vars/{{ ansible_os_family }}.yml"
     - "../vars/os_defaults.yml"
