--- a/tests/Dockerfile-debian9
+++ b/tests/Dockerfile-debian9
@@ -5,8 +5,8 @@ ARG PLAYBOOK_FILE="golang.yml"
 ARG PLUGIN_EXEC="go version"
 
 RUN apt-get update -qq && \
-    apt-get install -qq sudo python python3-apt python3-pycurl python3-pip python3-dev libffi-dev libssl-dev procps && \
-    pip3 install -U setuptools && \
+    apt-get install -qq sudo python3 python3-apt python3-pycurl python3-pip python3-dev libffi-dev libssl-dev procps && \
+    pip3 install -U setuptools cryptography && \
     pip3 install -q ansible==$ANSIBLE_VERSION && \
     ansible --version
 
@@ -14,7 +14,7 @@ WORKDIR /tmp/ansible-role-asdf
 COPY  .  /tmp/ansible-role-asdf
 
 RUN useradd -m deploy
-RUN echo localhost > inventory
+RUN echo 'localhost ansible_python_interpreter=/usr/bin/python3' > inventory
 
 RUN ansible-playbook -i inventory -c local tests/$PLAYBOOK_FILE
 
