Adds python to ansible-role-asdf * Allow additional environment variables to be passed for `asdf install` (e.g. `CC=clang`)   This helps the fix some installation issues that can occur. * Add the installation of python build dependencies for apt and yum systems.   From: https://github.com/pyenv/pyenv/wiki\#suggested-build-environment

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -38,3 +38,8 @@ asdf_yum_php_dependencies: ["re2c", "gettext", "libxml2-devel", "bzip2-devel", "
 
 asdf_apt_ruby_dependencies: ["libssl-dev", "libyaml-dev", "zlib1g-dev", "libncurses5-dev", "libffi-dev"]
 asdf_yum_ruby_dependencies: ["openssl-devel", "libyaml-devel", "zlib-devel", "ncurses-devel", "libffi-devel", "bzip2"]
+
+asdf_apt_python_dependencies: ["clang", "build-essential",  "libssl-dev", "zlib1g-dev", "libbz2-dev", "libsqlite3-dev", "wget", "llvm", 
+  "libncursesw5-dev", "xz-utils", "tk-dev", "libxml2-dev", "libxmlsec1-dev", "libffi-dev", "liblzma-dev"]
+asdf_yum_python_dependencies: ["clang", "zlib-devel", "bzip2", "bzip2-devel", "sqlite", "sqlite-devel", "openssl-devel", "tk-devel", 
+  "libffi-devel", "xz-devel"]
